# AiCoinXpert

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  model03_08_23_57.pth  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
algo/: features_augmentation.ipynb  prepare_data_for_bdd.ipynb
algo/train/: Train_AiCoinXpert.ipynb  engine.py  features.py  helper_functions.py  load.py  models_name.py  own_Classifier.ipynb  predict.py  test.py  train.py  training_notebook.ipynb
algo/train/going_modular/going_modular/: predictions.py  train.py  utils.py
algo/webscraping/: coins_to_db.csv  collect_data.ipynb  data_cleaning.ipynb  meta-stats-images.ipynb  meta_stats_dataviz.ipynb
algo/yolo/: config.yaml  main.py  run_yolo_video.py  webcam.py
algo/yolo/video_maker/: create_video_from_pictures.ipynb
algo/yolo/wandb/run-20230723_163559-ez0g2fzg/: run-ez0g2fzg.wandb
scripts/: create_dataframe_monitoring.py  monitoring.sh  script_ip_minio.sh  test_results.csv
src/backend/: app.py  db.py  infer_model.py  log_processor.py  minio_minio.py  models.py  models_creation.py  services.py  wtform_fields.py
src/backend/camera/: fake.py
src/backend/templates/: dashboard.html  index.html  login.html  streaming.html  wallet.html
src/backend/test/: conftest.py
src/backend/video/: run_yolo_video.py
src/backend/video/tmp/: detection_log.txt
src/frontend/static/styles/: dashboard_style.css  main_style.css  (+1 more)
src/frontend/templates/: base.html  dashboard.html  prelogin-layout.html
src/test/: conftest.py
src/test/ressources/: models.py
(+12 files in other folders)
